--- a/css/styles.css
+++ b/css/styles.css
@@ -1,118 +1,135 @@
-body{
-	background-color: lightblue;
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
-.header {
-    margin-left: 80px;
-    position: relative;
-    top: 60px;
-    float: left;
-    width: 6vw;
-    z-index: 100;
-    text-align: center;
-    opacity: 1;
+html {
+	overflow: hidden;
+}
+
+body {
+	background-color: #120FA6;
+	height: 100%;
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: cover;
+	overflow: hidden;
+	z-index: 0;
+}
+
+nav {
+	top: 10vh;
+  	text-align: center;
+  	float: left;
+  	background: rgba(255, 255, 255);
+  	position: fixed;
+  	z-index: 100;
+  	font-size: 13px;
+  	width: 6vw;
+  	font-weight: 300;
+	margin-left: 80px;
     visibility: visible;
     border-radius: 5px;
-    background-color: white;
 }
-
-ul{
+	
+nav ul {
 	padding: 2px;
 }
 
-li{
+nav li {
 	list-style: none;
-	padding: 20px;
+	padding: 25px;
+	color: #000;
+}
+
+nav em {
+	font-style: normal;
+}
+
+nav a {
+	text-decoration: none!important;
+  	position: relative;
+  	z-index: 0;
+}
+
+nav a, nav a:visited, nav a:active {
+  color: #000;
+}
+
+nav a.active {
+  background-color: #fff;
+  color: #000;
+}
+
+
+.slides {
+  width: 550vw;
+  height: 100vh;
+  -webkit-transition: -webkit-transform 0.8s ease;
+  transition: -webkit-transform 0.8s ease;
+  transition: transform 0.8s ease;
+  transition: transform 0.8s ease, -webkit-transform 0.8s ease;
+  z-index: 1;
+}
+
+.slides .slide {
+  height: 100vh;
+  width: 100vw;
+  float: left;
+  text-align: center;
+  background-size: cover;
+}
+
+.slides .slide .content {
+  overflow-y: scroll;
+  position: relative;
+  width: 50%;
+  height: 68%;
+  left: 40%;
+  top: 14%;
+  bottom: 10%;
+  background: rgba(255, 255, 255);
+}
+
+.content::-webkit-scrollbar {
+  width: 5px;
+  height: 8px;
+  background-color: rgba(255, 255, 255);
+}
+
+/* Add a thumb */
+.content::-webkit-scrollbar-thumb {
+    background: rgba(250, 250, 250);
+}
+
+
+.second-content .container-fluid {
+	padding-right: 0px;
+	padding-left: 0px;
+}
+
+.second-content p {
+	font-size: 16px;
+	color: #000;
+	letter-spacing: 0.5px;
+	font-weight: 300;
+	line-height: 24px;
+	margin-bottom: 30px;
 }
 
 .leftcol{
-	margin-left: 15px;
-    position: relative;
+	margin-left: 180px;
+    position: fixed;
     top: 50px;
-    float: left;
-    width: 35vw;
+    width: 30vw;
     height: 80vh;
     z-index: 100;
     text-align: center;
-    opacity: 1;
     visibility: visible;
     border-radius: 5px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.rightcol{
-	margin-left: 0px;
-    position: relative;
-    top: 85px;
-    float: left;
-    width: 40vw;
-    height: 70vh;
-    text-align: center;
-    opacity: 1;
-    visibility: visible;
-    background-color: white;
-}
-
-@media (max-width: 680px)
-{
-	.header{
-		margin-left: 100px;
-	    position: relative;
-	    top: 50px;
-	    float: left;
-	    width: 10vw;
-	    z-index: 100;
-	    text-align: center;
-	    opacity: 1;
-	    visibility: visible;
-	    border-radius: 5px;
-	    background-color: white;
-	}
-}
-	
-@media (max-width: 1120px)
-{
-	.header {
-		margin-left: 100px;
-	    position: relative;
-	    top: 50px;
-	    float: left;
-	    width: 10vw;
-	    z-index: 100;
-	    text-align: center;
-	    opacity: 1;
-	    visibility: visible;
-	    border-radius: 5px;
-	    background-color: white;
-		    
-	}
-	.leftcol{
-		margin-left: 15px;
-	    position: relative;
-	    top: 50px;
-	    float: left;
-	    width: 35vw;
-	    height: 80vh;
-	    z-index: 100;
-	    text-align: center;
-	    opacity: 1;
-	    visibility: visible;
-	    border-radius: 5px;
-	    background-color: white;
-	    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	}
-
-	.rightcol{
-		margin-left: 0px;
-	    position: relative;
-	    top: 85px;
-	    float: left;
-	    width: 40vw;
-	    height: 70vh;
-	    text-align: center;
-	    opacity: 1;
-	    visibility: visible;
-	    background-color: white;
-	}
 }
