--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+body{   
+    background-color:  #120FA6;
+}
 .login-container{
     margin-top: 5%;
     margin-bottom: 5%;
@@ -5,6 +8,7 @@
 .login-form-1{
     padding: 5%;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+    background-color: white;
 }
 .login-form-1 h3{
     text-align: center;
