--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body{   
-    background-color:  #120FA6;
+    /* background-image: url('images/bg.jpg'); */
 }
 .login-container{
     margin-top: 5%;
