--- a/css/styles.css
+++ b/css/styles.css
@@ -1,233 +1,56 @@
-/* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
-} */
-
-html {
-	overflow: hidden;
+body{   
+    background-color: #1B13C1 ; 
 }
-
-body {
-	background-color: #120FA6;
-	height: 100%;
-	background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-	overflow: hidden;
-	z-index: 0;
+.login-container{
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
-
-nav {
-	top: 10vh;
-  text-align: center;
-  float: left;
-  background: rgba(255, 255, 255);
-  position: fixed;
-  z-index: 100;
-  font-size: 13px;
-  width: 6vw;
-  font-weight: 300;
-	margin-left: 80px;
-  visibility: visible;
-  border-radius: 5px;
-}
-	
-nav ul {
-	padding: 2px;
-}
-
-nav li {
-	list-style: none;
-	padding: 25px;
-	color: #000;
-}
-
-nav em {
-	font-style: normal;
-}
-
-nav a {
-	text-decoration: none!important;
-  position: relative;
-  z-index: 0;
-}
-
-nav a, nav a:visited, nav a:active {
-  color: #000;
-}
-
-nav a.active {
-  background-color: #fff;
-  color: #000;
-}
-
-
-.slides {
-  width: 550vw;
-  height: 100vh;
-  -webkit-transition: -webkit-transform 0.8s ease;
-  transition: -webkit-transform 0.8s ease;
-  transition: transform 0.8s ease;
-  transition: transform 0.8s ease, -webkit-transform 0.8s ease;
-  z-index: 1;
-}
-
-.slides .slide {
-  height: 100vh;
-  width: 100vw;
-  float: left;
-  text-align: center;
-  background-size: cover;
-}
-
-.slides .slide .content {
-  overflow-y: scroll;
-  position: relative;
-  width: 50%;
-  height: 68%;
-  left: 40%;
-  top: 14%;
-  bottom: 10%;
-  background: rgba(255, 255, 255);
-}
-
-.content::-webkit-scrollbar {
-  width: 5px;
-  height: 8px;
-  background-color: rgba(255, 255, 255);
-}
-
-/* Add a thumb */
-.content::-webkit-scrollbar-thumb {
-    background: rgba(250, 250, 250);
-}
-
-
-.second-content .container-fluid {
-	padding-right: 0px;
-	padding-left: 0px;
-}
-
-.second-content p {
-	font-size: 16px;
-	color: #000;
-	letter-spacing: 0.5px;
-	font-weight: 300;
-	line-height: 24px;
-	margin-bottom: 30px;
-}
-
-.leftcol{
-    margin-left: 180px;
-    position: fixed;
-    top: 50px;
-    width: 30vw;
-    height: 80vh;
-    z-index: 100;
-    text-align: center;
-    visibility: visible;
-    border-radius: 5px;
+.login-form-1{
+    padding: 5%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
     background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
-
-
-@media (max-width: 1000px) {
-
-nav {
-      top: 0.01vh;
-      height: 50px;
-      background-color: rgba(255,255,255);
-      width: 100%;
-      font-weight: 300;
-      font-size: 1rem;
-      margin-left: 0px;
-      border-radius: 0px;
-      text-align: center;
-  }  
-
-  nav li {
-  list-style: none;
-  padding: 5px 55px 5px 55px;
-  color: #000;
-  display: inline-block;
-  }
-
-  nav em {
-    font-style: normal;
-  }
-
-  nav a {
-    text-decoration: none!important;
-    
-    z-index: 0;
-  }
-
-
-.leftcol{
-  margin-left: 0px;
-  width: 100%;
-  height: 90vh;
-  border-radius: 0px;
-  top: 49px;
+.login-form-1 h3{
+    text-align: center;
+    color: #333;
 }
-
-.slides .slide .content {
- display: none;
+.login-form-2{
+    padding: 5%;
+    background: #0062cc;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
 }
-
-
+.login-form-2 h3{
+    text-align: center;
+    color: #fff;
 }
-
-
-@media (max-width: 749px) {
-
-.leftcol{
-  margin-left: 0px;
-  width: 100%;
-  height: 90vh;
-  border-radius: 0px;
+.login-container form{
+    padding: 10%;
 }
-.slides .slide .content {
- display: none;
+.btnSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    border: none;
+    cursor: pointer;
 }
-nav li {
-  list-style: none;
-  padding: 5px 55px 5px 55px;
-  color: #000;
-  display: inline-block;
-  }
-
+.login-form-1 .btnSubmit{
+    font-weight: 600;
+    color: #fff;
+    background-color: #0062cc;
 }
-@media (max-width: 450px) {
-  
-.slides .slide {
-  height: 100vh;
-  width: 100vw;
-  float: left;
-  text-align: center;
-  background-size: cover;
+.login-form-2 .btnSubmit{
+    font-weight: 600;
+    color: #0062cc;
+    background-color: #fff;
 }
-
-.leftcol{
-  margin-left: 0px;
-  width:100%;
-  height: 90vh;
-  border-radius: 0px;
+.login-form-2 .ForgetPwd{
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
 }
-.slides .slide .content {
- display: none;
+.login-form-1 .ForgetPwd{
+    color: #0062cc;
+    font-weight: 600;
+    text-decoration: none;
 }
-nav li {
-  list-style: none;
-  padding: 5px 22px 5px 22px;
-  color: #000;
-  display: inline-block;
-  }
-  
-}
-
